# TheLineup

./: .editorconfig  .gitattributes  .gitignore  README.md  git-test.txt
Docs/: GIT_SETUP.md  (+2 more)
case_workflow/: CASE_SCHEMA.md  README.md  README_gradio_flux2.md  UNIVERSE_RULES.md  case_validation.py  download_flux2_klein_9b.py  download_flux2_turbo.py  download_qwen_snapshot.py  generate_case_008_turbo.py  gradio_flux2_studio.py  legacy_fast_requirements.txt  paths.py  pipeline_health_check.py  prompt_builder.py  pyproject.toml  qwen_compile.py  render_case.py  sync_curated_cases.py  test_flux2_klein_9b.py  test_prompt_build.py  test_qwen.py  validate_case_schema.py
case_workflow/cases/: case_009_the_neon_receipt.json  case_010_the_ghost_docket.json  case_011_the_sable_cartridge.json  case_012_the_ivory_switch.json  case_013_the_amber_turnstile.json  case_014_the_green_room_key.json  case_015_the_indigo_armature_key.json  case_016_the_vermilion_platform_seal.json
case_workflow/docs/: CASE_SCHEMA.md  PROCESS.md  README_gradio_flux2.md  UNIVERSE_RULES.md
case_workflow/src/case_workflow/: __init__.py  case_validation.py  paths.py  prompt_builder.py
case_workflow/styles/: amber_platform_gouache_v01.json  anime_casefiles_v01.json  claymation_casefiles_v01.json  clean_editorial.json  comic_noir.json  lucasarts_pixel_adventure_v01.json  neon_boulevard_grit_v01.json  rainlit_detective_pulp_v01.json  surrealism_casefiles_v01.json  vintage_halftone_heist_v01.json
case_workflow/tests/: __init__.py  test_flux2_klein_9b.py  test_prompt_build.py  test_qwen.py
(+70 files in other folders)
